--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Clean and regenerate lock file
+        run: |
+          rm -f package-lock.json
+          npm install
+          npm run build
+
       - name: Setup SSH
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -25,9 +36,6 @@ jobs:
         run: |
           rsync -av --delete \
             --exclude 'node_modules/' \
-            --exclude 'dist/' \
-            --exclude 'logs/' \
-            --exclude 'trash/' \
             --exclude '.git/' \
             --exclude '.env.local' \
             -e "ssh -i ~/.ssh/id_rsa" \
