--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bagociunas",
   "private": true,
+  "homepage":".",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -8,6 +9,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
+    "serve": "serve -s dist -p 3000",
     "deploy": "npm run build && gh-pages -d dist",
     "predeploy": "npm run build",
     "docker:build": "docker build -t aidas-portfolio .",
